# TeamC_Navigation

script/: navigate.py
src/Guidance-SDK-ROS/: CMakeLists.txt
src/Guidance-SDK-ROS/calibration_files/front_cam_param/: left.yaml  ost.txt  right.yaml
src/Guidance-SDK-ROS/calibration_files/left_cam_param/: left.yaml  ost.txt  right.yaml
src/Guidance-SDK-ROS/calibration_files/rear_cam_param/: right.yaml
src/Guidance-SDK-ROS/calibration_files/rear_cam_param/3_12/: ost.txt
src/Guidance-SDK-ROS/calibration_files/rear_cam_param/new/: left.yaml
src/Guidance-SDK-ROS/calibration_files/right_cam_param/: left.yaml  ost.txt  right.yaml
src/Guidance-SDK-ROS/launch/: guidance.launch  load_calib_file.launch
src/Guidance-SDK-ROS/src/: GuidanceNode _backup.cpp  GuidanceNode.cpp  GuidanceNodeCalibration.cpp  GuidanceNodeCalibration_backup.cpp
src/apriltag_ros/apriltag_ros/config/: tags.yaml
src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
src/apriltag_ros/apriltag_ros/scripts/data/: calibration.bag
src/dji_m100_controllers_gazebo/: CMakeLists.txt  package.xml
src/dji_m100_controllers_gazebo/src/: dji_m100_ros_hitl_controller_gazebo.cpp  dji_m100_ros_hitl_controller_gazebo_backup.cpp
src/dji_m100_description/urdf/: dji_m100.urdf.xacro  dji_m100_base.xacro  guidance.urdf.xacro  lidar.urdf.xacro
src/dji_m100_gazebo/: CMakeLists.txt
src/dji_m100_gazebo/launch/: simulate_dji_m100_gazebo.launch
src/dji_m100_gazebo/models/Apriltag36_11_00000/: model.sdf
src/dji_m100_gazebo/src/: dji_m100_pcsim_gazebo_bridge.cpp
src/dji_m100_gazebo/worlds/: obstacle_aovid.world  straight_line.world
src/dji_m100_landing/: CMakeLists.txt
src/dji_m100_landing/launch/: apriltag_track_landing.launch
src/dji_m100_landing/src/: position_track_state_publisher.cpp  position_track_velocity_controller.cpp  track_apriltag_landing.cpp  track_apriltag_landing_velocity.cpp
src/ros_drone/base_controller/: CMakeLists.txt  package.xml
src/ros_drone/base_controller/include/: base_controller.h
src/ros_drone/base_controller/launch/: base_controller.launch
src/ros_drone/base_controller/src/: base_controller.cpp
src/ros_drone/odom/: CMakeLists.txt  package.xml
src/ros_drone/odom/include/: odom.h
src/ros_drone/odom/src/: odom.cpp
src/ros_drone/point_cloud/: CMakeLists.txt  package.xml
src/ros_drone/point_cloud/include/: point_cloud.h
src/ros_drone/point_cloud/launch/: point_cloud.launch
src/ros_drone/point_cloud/src/: point_cloud.cpp
src/ros_drone/ros_drone_launch/: CMakeLists.txt  package.xml
src/ros_drone/ros_drone_launch/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/ros_drone/ros_drone_launch/launch/: move_base.launch  move_base_odom.launch  set_up.launch  set_up_one.launch  set_up_simu.launch
